--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^10.3.9",
     "@prisma/client": "^5.15.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
