--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
